# agml_chat

./: .gitignore  README.md  pyproject.toml
agml_chat/: __init__.py  agml_data.py  chat_template_adapter.py  common.py  dataset.py  engine.py  flash_attention.py  modeling.py  prompts.py  research.py  training.py  web.py
agml_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agml_chat/templates/: ui.html
configs/: prompt_config.example.yaml
docs/: CHAT_USAGE.md  FULL_PIPELINE_RUNBOOK.md  LAMBDA_SCRIPT_RUNBOOK.md
runs/: full_pipeline.sh  lambda_full_pipeline.sh  prepare_and_train_example.sh  runcpu.sh  sweep_pipeline.sh
scripts/: __init__.py  chat_cli.py  chat_sft.py  chat_web.py  finalize_checkpoint.py  list_agml_datasets.py  prepare_agml_sft.py  recover_legacy_lora_adapter.py  resolve_flash_attn_wheel.py  upload_to_hf.py
tests/: test_agml_loader_fallback.py  test_chat_template_adapter.py  test_dataset_utils.py  test_label_sentence_format.py  test_lora_target_infer.py  test_model_adapter_resolution.py  test_prompts.py  test_qwen_plumbing.py  test_split_ratios.py  test_web_validation.py
